--- a/css/main.css
+++ b/css/main.css
@@ -1518,11 +1518,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-<<<<<<< HEAD
-  background: #98297f;
-=======
-  background: #cfb5f2;
->>>>>>> working
+  background: #de3ce8;
 }
 .links-of-blogroll {
   font-size: 13px;
