--- a/css/main.css
+++ b/css/main.css
@@ -1518,7 +1518,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff3866;
+  background: #e57408;
 }
 .links-of-blogroll {
   font-size: 13px;
